--- a/src/main/java/webview/index.html
+++ b/src/main/java/webview/index.html
@@ -1,43 +1,1 @@
-<!DOCTYPE html>
-<html><head>
-    <title>Example Page</title>
-    <meta charset="utf-8">
-    <meta http-equiv="Content-type" content="text/html; charset=UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <style type="text/css">
-    body {
-        background-color: #f0f0f2;
-        margin: 0;
-        padding: 0;
-        font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-        
-    }
-    div {
-        width: 600px;
-        margin: 5em auto;
-        padding: 2em;
-        background-color: #fdfdff;
-        border-radius: 0.5em;
-        box-shadow: 2px 3px 7px 2px rgba(0,0,0,0.02);
-    }
-    a:link, a:visited {
-        color: #38488f;
-        text-decoration: none;
-    }
-    @media (max-width: 700px) {
-        div {
-            margin: 0 auto;
-            width: auto;
-        }
-    }
-    </style>    
-</head>
-
-<body>
-	<div>
-	    <h1>Example Page</h1>
-	    <p>This domain is for use in illustrative examples in documents. You may use this
-	    domain in literature without prior coordination or asking for permission.</p>
-	    <p><a href="https://www.iana.org/domains/example">More information...</a></p>
-	</div>
-</body></html>
+<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><title>spa</title><link href="static/css/app.30790115300ab27614ce176899523b62.css" rel=stylesheet></head><body><div id=app></div><script type=text/javascript src="static/js/manifest.2ae2e69a05c33dfc65f8.js"></script><script type=text/javascript src="static/js/vendor.0aad2172a75b8ed4f46c.js"></script><script type=text/javascript src="static/js/app.2f2e5edd9af2c59aa514.js"></script></body></html>
